# appifyEcommerce

./: ._README.md  README.md  README_ACCOUNTS.md  README_AUTH.md  README_RBAC.md  db.sqlite3  makefile  manage.py  pyproject.toml  requirements.txt  test_auth_api.py  test_register.py
accounts/: admin.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
appifyEcommerce/: asgi.py  settings.py  urls.py  wsgi.py
appifyEcommerce/api/: __init__.py  serializers.py  viewsets.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_remove_cart_created_at_remove_cart_updated_at.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_rename_total_amount_order_total_price_and_more.py
products/: admin.py  models.py
products/migrations/: 0001_initial.py  0002_remove_product_category_and_more.py  0003_alter_product_options_product_reserved_stock.py
tests/: test_rbac.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_remove_user_address_remove_user_phone_user_role.py
